<resources>
    <string name="app_name">Fwd: the port forwarding app (Fork)</string>
    <string name="app_tag">Fwd (Fork)</string>


    <!-- Main Screen -->
    <string name="action_start_forwarding">Start</string>
    <string name="action_stop_forwarding">Stop</string>
    <string name="empty_state_text">No rules to show</string>

    <string name="pref_help_link_text">Help</string>
    <string name="action_help">Help</string>
    <string name="help_title">Help</string>

    <string name="pref_about_link_text">About Elixsr</string>
    <string name="about_elixsr_title">About Elixsr</string>

    <string name="source_code_title">Source Code (Fork)</string>

    <string name="settings_title">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="accessibility_main_activity_rule_list">Rule List</string>


    <!-- Viewing or Editing a Rule -->
    <string name="new_rule_title">New Rule</string>
    <string name="edit_rule_title">Edit Rule</string>

    <string name="action_save_rule">Save</string>
    <string name="action_delete_rule">Delete</string>

    <string name="switch_on_text">Enabled</string>
    <string name="switch_off_text">Disabled</string>

    <string name="rule_title_hint">Rule Title</string>
    <string name="select_rule_protocol">Protocol</string>
    <string name="new_rule_from">From</string>
    <string name="new_rule_port">Port</string>
    <string name="new_rule_target">Target</string>
    <string name="new_rule_target_ip_address">Target IP Address</string>

    <string-array name="rule_protocol_array">
        <item>TCP</item>
        <item>UDP</item>
        <item>BOTH</item>
    </string-array>

    <!-- Settings -->
    <string name="pref_general_category_title">General</string>
    <string name="pref_clear_rules_text">Clear Rules</string>
    <string name="pref_dark_theme_text">Dark Theme</string>
    <string name="pref_start_on_boot_text">Start Forwarding on Startup</string>
    <string name="pref_about_category_title">About</string>
    <string name="pref_import_export_category_title">Manage Rules</string>
    <string name="pref_import_export_button">Import Rules</string>
    <string name="pref_export_button">Export Rules</string>
    <string name="ip_checker_title">IP Checker</string>
    <string name="start_rule_error_message">Error while trying to start rule</string>
    <string name="import_rules_button_text">Import Rules</string>
    <string name="export_rules_button_text">Export Rules</string>
    <string name="export_rules_action_title">Export Rules</string>
    <string name="pref_ip_checker_title">IP Checker</string>
    <string name="pref_import_export" />
    <string name="pref_import_export_title">Import/Export Rules</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="pref_advanced_category_title">Advanced</string>

    <!-- Advanced Settings -->
    <string name="pref_enable_ads">Disable Advertisements</string>
    <string name="pref_enable_ads_summary">Ads help support the development of Fwd</string>
    <string name="ip_checker_tool_public_text">Public</string>
    <string name="ip_checker_tool_private_text">Private</string>

    <!-- App Intros -->
    <string name="app_intro_1_title">Add Rules</string>
    <string name="app_intro_1_text">Create and edit port forwarding rules</string>
    <string name="app_intro_2_title">Start and Stop</string>
    <string name="app_intro_2_text">Easily start and stop forwarding of all rules with a tap</string>
    <string name="app_intro_3_title">Extensive Help</string>
    <string name="app_intro_3_text">Should you need any support, visit our help section</string>

    <!-- Alert Dialogs -->
    <string name="alert_dialog_delete_entry_title">Delete entry</string>
    <string name="alert_dialog_delete_entry_text">Are you sure you want to delete this entry?</string>

    <string name="alert_dialog_delete_all_rules_title">Delete all Rules</string>
    <string name="alert_dialog_delete_all_rules_text">Are you sure you want to delete all rules?</string>

    <!-- Snack bars -->
    <string name="snackbar_port_forwarding_started_text">Port Forwarding Started</string>
    <string name="snackbar_port_forwarding_stopped_text">Port Forwarding Stopped</string>

    <!-- Error Messages -->
    <string name="text_input_error_enter_name_text">You must enter a name</string>
    <string name="text_input_error_enter_ip_address_text">You must enter a target IP Address</string>
    <string name="text_input_error_invalid_ip_address_text">Please enter a valid IP Address</string>
    <string name="toast_error_rule_not_valid_text">Rule is not valid. Please check your input.</string>

    <!-- Notifications -->
    <string name="notification_forwarding_active_title">Port Forwarding Active</string>
    <string name="notification_forwarding_touch_disable_text">Touch to disable</string>

    <!-- TO ADD -->

    <!-- Error Messages -->
    <!--<string name="p">Please enter a value greater than or equal to 1024 and less than or equal to 65535</string>-->
    <!--<string name="port_eroolor">Could not bind port 6000 for TCP Rule 'fgh'</string>-->

    <string-array name="sample_from_interfaces">
        <item>Rmte0</item>
        <item>Rmte1</item>
    </string-array>

    <!-- Untranslatable -->
    <string name="pref_clear_rules" translatable="false">pref_clear_rules</string>
    <string name="pref_help_link" translatable="false">pre_help_link</string>
    <string name="pref_about_link" translatable="false">pref_about_link</string>
    <string name="pref_version" translatable="false">pref_version</string>
    <string name="app_intro" translatable="false">app_intro</string>
    <string name="pref_dark_theme" translatable="false">pref_dark_theme</string>
    <string name="pref_start_on_boot" translatable="false">pref_start_on_boot</string>
    <string name="title_activity_advanced_settings" translatable="false">AdvancedSettingsActivity</string>
    <string name="pref_disable_ads_key" translatable="false">disable_ads_key</string>
    <string name="pref_ip_checker" translatable="false">pref_ip_checker</string>
    <string name="pref_import" translatable="false">pref_import</string>
    <string name="pref_export" translatable="false">pref_export</string>
    <string name="import_rules_title">Import Rules</string>
    <string name="title_activity_import_export_rules">ImportRulesActivity</string>
    <string name="import_export_support_site_title">Help</string>


</resources>
