<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<CheckBoxPreference-->
        <!--android:key="pref_sync"-->
        <!--android:title="@string/pref_enable_ads"-->
        <!--android:summary="@string/pref_enable_ads_summary"-->
        <!--android:defaultValue="true" />-->
    <PreferenceCategory
        android:title="@string/pref_general_category_title"
        android:key="pref_general_category">
        <CheckBoxPreference
            android:key="@string/pref_dark_theme"
            android:title="@string/pref_dark_theme_text" />
        <CheckBoxPreference
            android:key="@string/pref_start_on_boot"
            android:title="@string/pref_start_on_boot_text" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_import_export_category_title"
        android:key="pref_import_export_category">
        <Preference
            android:key="@string/pref_import"
            android:title="@string/pref_import_export_button"/>
        <Preference
            android:key="@string/pref_export"
            android:title="@string/pref_export_button"/>
        <Preference
            android:key="@string/pref_clear_rules"
            android:title="@string/pref_clear_rules_text" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_category_title"
        android:key="pref_about_category">
        <!--<Preference-->
            <!--android:key="@string/pref_help_link"-->
            <!--android:title="@string/pref_help_link_text" />-->
        <Preference
            android:key="@string/pref_about_link"
            android:title="@string/pref_about_link_text" />
        <Preference
            android:key="@string/pref_version" />
    </PreferenceCategory>
</PreferenceScreen>