<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!--

    android:focusable="true"
    android:focusableInTouchMode="true"

    -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_rule_name_input_layout">

        <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/rule_title_hint"/>-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_rule_name"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:hint="@string/rule_title_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_rule_protocol"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:layout_marginTop="5dip"
        android:prompt="@string/select_rule_protocol"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:id="@+id/protocol_spinner">
    </android.support.v7.widget.AppCompatSpinner>


    <!--
        From Setup
    -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_rule_from"/>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:prompt="@string/select_rule_protocol"
            android:id="@+id/from_interface_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:layout_widthPercent="70%">
        </android.support.v7.widget.AppCompatSpinner>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_rule_from_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="30%"
            android:layout_toRightOf="@id/from_interface_spinner"
            android:inputType="number"
            android:textSize="@dimen/new_rule_default_text_size"
            android:hint="@string/new_rule_port" />

    </android.support.percent.PercentRelativeLayout>

    <!--
        Target Setup
    -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_rule_target"/>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_rule_target_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="70%"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:textSize="@dimen/new_rule_default_text_size"
            android:hint="@string/new_rule_target_ip_address" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_rule_target_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="30%"
            android:layout_toRightOf="@id/new_rule_target_ip_address"
            android:inputType="number"
            android:textSize="@dimen/new_rule_default_text_size"
            android:hint="@string/new_rule_port" />

    </android.support.percent.PercentRelativeLayout>

</LinearLayout>
</ScrollView>