<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elixsr.portforwarder.ui.preferences.ImportRulesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
            app:title="@string/import_rules_title" >
        <ImageView
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_help_outline_white_24dp" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/import_rules_count_text"
                android:text="abcdef"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />
            <!--
             From Setup
             -->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:text="@string/new_rule_from"
                android:textSize="12sp"
                android:theme="@style/TextInputTextHint"
                tools:ignore="RtlSymmetry"
                tools:text="From" />

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/from_interface_spinner"
                    style="@style/tempSpinnerOverride"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/select_rule_protocol"
                    android:textSize="40sp"
                    android:theme="@style/SpinnerText"
                    app:layout_widthPercent="100%" />

            </android.support.percent.PercentRelativeLayout>

            <!--
                Target Setup
            -->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:text="@string/new_rule_target"
                android:textSize="12sp"
                android:theme="@style/TextInputTextHint"
                tools:ignore="RtlSymmetry" />

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_rule_target_ip_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/new_rule_target_ip_address"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/new_rule_default_text_size"
                    android:theme="@style/TextInputTextHint"
                    app:layout_widthPercent="100%"
                    tools:text="Target IP Address" />

            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.widget.Button
            android:id="@+id/import_rules_button"
            android:layout_height="60dp"
            android:textColor="@color/colorAccentInverse"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_gravity="bottom"
            android:text="IMPORT RULES">


        </android.widget.Button>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
